# NiftyNet

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETEME-130-test.txt  LICENSE  README.md  base_layer.py  compare_segmentations.py  compute_ROI_statistics.py  compute_statistics.py  data_augmentation.py  eval_dep.py  evaluation.py  highres3dnet_config_eval.txt  inference.py  input_queue.py  loss.py  loss_testing.py  morphology.py  net.ini  net_autoencoder.py  net_classify.py  net_convert.py  net_download.py  net_gan.py  net_segment.py  net_segmentation.py  nn_queue.py  pairwise_measures.py  parse_user_params.py  preprocess.py  pylintrc  queue.py  (+24 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.gitlab/: issue_template.md
ci/: bundlewheel.sh  findwheel.sh  test_pip_installer.sh  testwheel.sh  utils.sh
config/: 3dunet_config.txt  CONFIGURATION.md  GAN_demo_train_config.ini  GAN_demo_train_config.yml  README.md  autoencoder_config.txt  convolutional_autoencoder_config.txt  convolutional_variational_autoencoder_config.txt  deepmedic_config.ini  deepmedic_config.txt  deepmedic_config.yml  default_config.ini  default_config.txt  default_config_eval.txt  default_config_stats.txt  default_eval_config.ini  default_eval_config.txt  default_eval_config.yml  default_monomodal_regression.ini  default_monomodal_regression.yml  default_monomodal_regression_eval.ini  default_monomodal_regression_eval.yml  default_multimodal_config.txt  default_multimodal_segmentation.ini  default_multimodal_segmentation.yml  default_multimodal_segmentation_eval.ini  default_multimodal_segmentation_eval.yml  default_segmentation.ini  default_segmentation.yml  default_segmentation_bf.ini  densevnet_config.ini  densevnet_config.yml  guunet.ini  highres3dnet_config.ini  highres3dnet_config.txt  highres3dnet_config.yml  holisticnet_config.ini  holisticnet_config.yml  label_driven_registration.ini  label_driven_registration.yml  (+21 more)
demos/: README.md
doc/: Makefile  make.bat  requirements.txt
engine/: README.md  __init__.py  base_sampler.py  data_augmentation.py  grid_sampler.py  inference.py  input_buffer.py  input_queue.py  logging.py  sampler.py  selective_sampler.py  spatial_location_check.py  toy_sampler.py  training.py  training_deprecated.py  uniform_sampler.py  volume_loader.py
evaluation/: compare_segmentations.py  compute_ROI_statistics.py  pairwise_measures.py  region_properties.py
niftynet/contrib/niftyreg_image_resampling/niftyreg_gpu_resampler/: CMakeLists.txt  _reg_ReadWriteImage.cpp  _reg_ReadWriteImage.h  _reg_common_cuda.cu  _reg_common_cuda.h  _reg_maths.cpp  _reg_maths.h  _reg_maths_eigen.cpp  _reg_maths_eigen.h  _reg_resampling.cpp  _reg_resampling.h  _reg_resampling_gpu.cu  _reg_resampling_gpu.h  _reg_tools.cpp  _reg_tools.h  interpolations.h  interpolations.tpp  niftyreg_cpu_resample_gradient_op.cpp  niftyreg_cpu_resample_gradient_op.h  niftyreg_cpu_resample_image_gradient_op.cpp  niftyreg_cpu_resample_image_gradient_op.h  niftyreg_cpu_resample_op.cpp  niftyreg_cpu_resample_op.h  niftyreg_gpu_resample_gradient_op.cu  niftyreg_gpu_resample_gradient_op.h  niftyreg_gpu_resample_op.cu  niftyreg_gpu_resample_op.h  niftyreg_resample_op.h  niftyreg_resample_op.tpp  python_wrapper.cpp  resampleKernel.cu  resampleKernel.h  resampler_boundary.h  resampler_boundary.tpp
niftynet/contrib/niftyreg_image_resampling/niftyreg_gpu_resampler/cmake/modules/: FindNumPy.cmake  FindTensorflow.cmake
niftynet/contrib/niftyreg_image_resampling/niftyreg_gpu_resampler/nifti/: CMakeLists.txt  nifti1.h  nifti1_io.c  nifti1_io.h  znzlib.c  znzlib.h
niftynet/contrib/niftyreg_image_resampling/tests/: CMakeLists.txt  make_small_image.py  test_python_wrapper.py  test_resampler.py  test_resampling.cpp
nn/: crf.py  (+9 more)
(+760 files in other folders)
